--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="inner-form" role="form">
                 <fieldset>
                     <legend><h2>Créer un compte</h2></legend>
-                    <form action="connexion.html" method="post"> <!-- mettre le nom du fichier html dans aciton -->
+                    <form action="./connexion.html" method="post"> <!-- mettre le nom du fichier html dans aciton -->
                         <label for="nom">Nom *</label>
                         <input type="text" id="nom" name="nom" placeholder="Nom" aria-required="true"  autofocus>
     
