Page de connection et feuille de style + update index

--- a/index.html
+++ b/index.html
@@ -47,7 +47,15 @@
             Créer un compte
         </a>
     </div>
-    <main>
+    
+    <main >
+
+        <div id="scroll" class="button-scroll">
+            <a href="#new-account"> 
+                <img class="button-img" src="./asset/arrow.png" alt="icon-arrow" loading="lazy" itemprop="image">
+            </a>
+        </div>
+
         <section id="new-account">
             <h2>
                 Une boîte de réception<br>
