Global Update php

--- a/!connexion.html
+++ b/!connexion.html
@@ -56,7 +56,7 @@
             <div class="inner-form" role="form">
                 <fieldset>
                     <legend><h2>Connectez-vous à votre compte</h2></legend>
-                    <form action="./connexion.html" method="post"> <!-- mettre le nom du fichier html dans aciton -->
+                    <form action="./home.php" method="post"> <!-- mettre le nom du fichier html dans aciton -->
     
                         <label for="mail">Mail *</label>
                         <input type="email" id="mail" name="mail" placeholder="Veuillez entre votre mail" aria-required="true">
