Modif page statique

--- a/connexion.html
+++ b/connexion.html
@@ -33,9 +33,9 @@
             </section>
 
             <ul itemprop="genre">
-                <li><a href="./index.php#welcome-picture" itemprop="url">Pour les pros</a></li>
+                <li><a href="./!index.html#welcome-picture" itemprop="url">Pour les pros</a></li>
                 <li class="first-new-account-button-connect"><a href="connexion.html" itemprop="url">Connexion</a></li>
-                <li><a href="./index.php#new-account" itemprop="url">Créer Un Compte</a></li>
+                <li><a href="./!index.html#new-account" itemprop="url">Créer Un Compte</a></li>
             </ul>                
         
         </nav> 
@@ -50,7 +50,7 @@
 
         <section id="connexion">
             <h2>
-                Bienvenue dans votre espace null
+                Bienvenue !
             </h2>
 
             <div class="inner-form" role="form">
