--- a/!index.html
+++ b/!index.html
@@ -8,8 +8,8 @@
 
     <meta property="og:title" content="Gmail">
     <meta property="og:type" content="website">
-    <meta property="og:domain" content="">
-    <meta property="og:url" content="">
+    <meta property="og:domain" content="djony-herbaut.github.io">
+    <meta property="og:url" content="https://djony-herbaut.github.io/Projet_BTS_Gmail/!index.html#welcome-picture">
     <meta property="og:description" content="Gmail Login page">
     <meta property="og:image" content="">
 
@@ -69,7 +69,7 @@
             <div class="inner-form" role="form">
                 <fieldset>
                     <legend><h2>Créer un compte</h2></legend>
-                    <form action="./connexion.html" method="post"> <!-- mettre le nom du fichier html dans aciton -->
+                    <form action="connexion.html" method="post"> 
                         <label for="nom">Nom *</label>
                         <input type="text" id="nom" name="nom" placeholder="Nom" aria-required="true"  autofocus>
     
