Modif page statique open Graph metaData

--- a/connexion.html
+++ b/connexion.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" prefix="og: https://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +8,10 @@
 
     <meta property="og:title" content="Gmail">
     <meta property="og:type" content="website">
-    <meta property="og:domain" content="">
-    <meta property="og:url" content="">
+    <meta property="og:domain" content="djony-herbaut.github.io">
+    <meta property="og:url" content="https://djony-herbaut.github.io/Projet_BTS_Gmail/connexion.html">
     <meta property="og:description" content="Gmail Login page">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://github.com/Djony-Herbaut/Projet_BTS_Gmail/blob/master/asset/images.png">
 
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -56,7 +56,7 @@
             <div class="inner-form" role="form">
                 <fieldset>
                     <legend><h2>Connectez-vous à votre compte</h2></legend>
-                    <form action="./home.php" method="post"> <!-- mettre le nom du fichier html dans aciton -->
+                    <form action="blank" method="post"> <!-- mettre le nom du fichier html dans aciton -->
     
                         <label for="mail">Mail *</label>
                         <input type="email" id="mail" name="mail" placeholder="Veuillez entre votre mail" aria-required="true">
