--- a/!index.html
+++ b/!index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" prefix="og: https://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,8 +10,8 @@
     <meta property="og:type" content="website">
     <meta property="og:domain" content="djony-herbaut.github.io">
     <meta property="og:url" content="https://djony-herbaut.github.io/Projet_BTS_Gmail/!index.html#welcome-picture">
-    <meta property="og:description" content="Gmail Login page">
-    <meta property="og:image" content="">
+    <meta property="og:description" content="Gmail Sign up page">
+    <meta property="og:image" content="https://github.com/Djony-Herbaut/Projet_BTS_Gmail/blob/master/asset/images.png">
 
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -69,7 +69,7 @@
             <div class="inner-form" role="form">
                 <fieldset>
                     <legend><h2>Créer un compte</h2></legend>
-                    <form action="connexion.html" method="post"> 
+                    <form action="./connexion.html" method="post"> 
                         <label for="nom">Nom *</label>
                         <input type="text" id="nom" name="nom" placeholder="Nom" aria-required="true"  autofocus>
     
