Modif pages modif Lien

--- a/connexion.html
+++ b/connexion.html
@@ -33,9 +33,9 @@
             </section>
 
             <ul itemprop="genre">
-                <li><a href="./!index.html#welcome-picture" itemprop="url">Pour les pros</a></li>
+                <li><a href="./index.html#welcome-picture" itemprop="url">Pour les pros</a></li>
                 <li class="first-new-account-button-connect"><a href="connexion.html" itemprop="url">Connexion</a></li>
-                <li><a href="./!index.html#new-account" itemprop="url">Créer Un Compte</a></li>
+                <li><a href="./index.html#new-account" itemprop="url">Créer Un Compte</a></li>
             </ul>                
         
         </nav> 
@@ -56,7 +56,7 @@
             <div class="inner-form" role="form">
                 <fieldset>
                     <legend><h2>Connectez-vous à votre compte</h2></legend>
-                    <form action="blank" method="post"> <!-- mettre le nom du fichier html dans aciton -->
+                    <form action="#" method="post"> <!-- mettre le nom du fichier html dans aciton -->
     
                         <label for="mail">Mail *</label>
                         <input type="email" id="mail" name="mail" placeholder="Veuillez entre votre mail" aria-required="true">
