--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="inner-form" role="form">
                 <fieldset>
                     <legend><h2>Créer un compte</h2></legend>
-                    <form action="./connexion.html" method="post"> 
+                    <form action="#" method="post"> 
                         <label for="nom">Nom *</label>
                         <input type="text" id="nom" name="nom" placeholder="Nom" aria-required="true"  autofocus>
     
